--- a/style.css
+++ b/style.css
@@ -1,51 +1,107 @@
-   * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(to right, #f0f4f8, #ffffff);
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      align-items: flex-start;
-      height: 100vh;
-      text-align: center;
-      color: #333;
-      padding: 20px;
-    }
-    h1,<h2>margin: 2</h2>
-
-    h1 {
-      font-size: 3em;
-      color: #05021d;
-      margin-bottom: 10px;
-    }
-
-    p {
-      font-size: 1.2em;
-      color: #555;
-    } 
-    .red {color: rgb(204, 38, 9);font-weight: bold;font-size: 1.5em;}
-    .glow {color: rgb(236, 47, 14); animation: glow 1.5s infinite alternate;}
-    @keyframes glow {
-      from {text-shadow: 0 0 6px rgb(156, 57, 20);}
-      to{text-shadow: 0 0 25px rgb(156, 57, 20), 0 0 45px rgb(156, 57, 20);}
-    }
-    .btn {
-      display: inline-block;
-      padding: 12px 24px;
-      background-color: rgb(230, 53, 22);
-      text-decoration: none;
-      color:white;
-      font-size: 1em;
-      border-radius: 8px;
-      margin-top: 20px;
-      transition: background-color 0.3s ease;
-    }
-    .btn:hover {
-      background-color: rgb(165, 26, 7);
-      box-shadow: 0 0 10px rgb(236, 73, 8);
-    }
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+}
+body {
+  transform: scale(1.0);
+  transform-origin: top center;
+  font-family: 'poppins',sans-serif;
+  margin: 10px;
+  padding: 0;
+  background: #f7e1c0;
+  text-align: center;
+  padding: 30px 10px;
+}
+h1 {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 40px;
+  margin-bottom: -20px;
+  margin-top: 60px;
+  text-align: left;
+  color: rgb(13, 20, 29);
+  padding: 0;
+  margin-left: 150px;
+}
+.highlight {
+  color: #f1681d;
+  font-weight: bold;
+  font-size: 60px;
+  font-style: italic;
+}
+.action-section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 40px;
+  flex-wrap: wrap;
+}
+.action-btn {
+  padding: 12px 12px;
+  background-color: #f1681d;
+  color: rgb(255, 255, 255);
+  border: none;
+  font-size: 12px;
+  gap: 50px;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: 0.3s;
+  text-decoration: none;
+  font-weight: bold;
+  font-family: 'Courier New', Courier, monospace;
+  text-transform: uppercase;
+  text-shadow: 1px 1px 2px rgb(0,0,0,0.2);
+}
+.action-btn:hover {
+  background-color: #9b3107;
+}
+.btn-icon {
+  width: 40px;
+  height: 24px;
+}
+.contact-btn {
+  position: fixed;
+  bottom: -135px;
+  right: 150px;
+  z-index: 1000;
+}
+.contact-btn img {
+  width: auto;
+  height: auto;
+  border-radius: 35%;
+  box-shadow: 0 4px 10px rgb(0,0,0,0.3);
+  transition: transforn 0.3s ease;
+  background-color: #f1681d;
+}
+.contact-btn img:hover {
+  transform: scale(1.1);
+  cursor: pointer;
+}
+.main-container {
+  position: relative;
+  background-color: white;
+  border-radius: 30px;
+  padding: 40px;
+  box-shadow: 0 10px 30px rgba(0,0,0,0.05);
+  max-width: 1100px;
+  margin: 60px auto;
+  width: 90%;
+}
+img {
+  width: 210px;
+  height: auto;
+}
+h4 {
+  text-align: left;
+  margin-bottom: -40px;
+  padding: 0;
+  margin-left: 160px;
+  color: rgb(13, 20, 29);
+  font-style: italic;
+  font-family: cursive;
+}
+p {
+  font-size: 20px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
