--- a/style.css
+++ b/style.css
@@ -12,10 +12,14 @@ body {
   background: #f7e1c0;
   text-align: center;
   padding: 30px 10px;
+  @media (max-width: 768px) {
+    h1 { font-size: 1.8rem;}
+    p {font-size: 0.9rem;}
+  }
 }
 h1 {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 40px;
+  font-size: 2.5rem;
   margin-bottom: -20px;
   margin-top: 60px;
   text-align: left;
@@ -82,9 +86,9 @@ h1 {
   position: relative;
   background-color: white;
   border-radius: 30px;
-  padding: 40px;
+  padding: 20px 40px;
   box-shadow: 0 10px 30px rgba(0,0,0,0.05);
-  max-width: 1100px;
+  max-width: 100%;
   margin: 60px auto;
   width: 90%;
 }
