--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html, body {
   margin: 0;
   padding: 0;
-  height: 100vh;
+  min-height: 100%;
 }
 body {
   transform: scale(1.0);
@@ -12,7 +12,7 @@ body {
   background: #f7e1c0;
   text-align: center;
   padding: 30px 10px;
-  height: 100vh;
+  min-height: 100%;
   box-sizing: border-box;
 
   }
@@ -98,12 +98,12 @@ h1 {
   padding: 20px 40px;
   box-shadow: 0 10px 30px rgba(0,0,0,0.05);
   max-width: 100%;
-  margin: 60px auto;
+  margin: 0 auto;
   width: 85%;
-  height: 80vh;
+  min-height: 80vh;
 }
 img {
-  width: 200px;
+  max-width: 200px;
   height: auto;
   position: relative;
   top: -99px; /* move down */
@@ -132,7 +132,7 @@ p {
   .main-container {
     padding: 30px;
     text-align: center;
-    height: 160vh;
+    min-height: auto;
   }
   .landing h1 {
     font-size: 1.2rem;
@@ -173,7 +173,7 @@ p {
   }
   .contact-btn {
     position: relative;
-    top: 40px; /* move down */
+    top: 20px; /* move down */
   left: 0%; /* move right*/
   }
 }
