--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ p {
       font-family: 'Inter', sans-serif;
     }
     h1, h4 {
-      font-family: 'poppins' sans-serif;
+      font-family: 'poppins', sans-serif;
     }
   .landing h1 {
     font-size: 1.2rem;
